--- a/app/src/main/res/layout/contact_list_items.xml
+++ b/app/src/main/res/layout/contact_list_items.xml
@@ -14,6 +14,8 @@
         android:layout_marginEnd="92dp"
         android:layout_marginBottom="8dp"
         android:text="Karen"
+
+        android:layout_margin="8dp"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/tvNumber"
         app:layout_constraintEnd_toEndOf="parent"
